--- a/Styles/calculator.css
+++ b/Styles/calculator.css
@@ -25,15 +25,16 @@ h1 span{
 	color: #fd7202;
 }
 
-.calculatorButtons{
+#calculatorContainer button{
 	width: 50px;
 	height: 50px;
 	margin: 2px 0;
 	transition: all .5s;
 	font-weight: bold;
+	border: 1px solid white;
 }
 
-.calculatorButtons:hover{
+#calculatorContainer button:hover{
 	font-size: 1.1em;
 	background-color: rgb(201, 190, 190);
 	cursor: pointer;
@@ -53,7 +54,7 @@ h1 span{
 	transition: all .5s;
 }
 
-#equalButton{
+#calculatorContainer #equalButton{
 	height: 50px;
 	width: 214px;
 	background-color: #fd7202;
@@ -61,37 +62,30 @@ h1 span{
 	border: 1px solid #fd7202;
 }
 
-#equalButton:hover{
+#calculatorContainer #equalButton:hover{
 	background-color: #f8923e;
 }
 
-#clearButton{
+#calculatorContainer #clearButton{
 	background-color: red;
 	color: #fff;
 	border: 1px solid red;
 	transition: all .5s;
 }
-#clearButton:hover{
+
+#calculatorContainer #clearButton:hover{
 	font-size: 0.9em;
 	background-color: rgb(236, 69, 69);
 	cursor: pointer;
 }
 
-
-/*
-#plus, #minus, #by, #divide
-*/
-.operators{
+#calculatorContainer .operators{
 	background-color: green;
 	color: #fff;
 	border: 1px solid green;
-	font-size: 16px;
 }
 
-/*
-#plus:hover, #minus:hover, #by:hover, #divide:hover
-*/
-.operators:hover{
+#calculatorContainer .operators:hover{
 	font-size: 1.1em;
 	background-color: rgb(16, 180, 16);
 }
