--- a/Styles/calculator.css
+++ b/Styles/calculator.css
@@ -4,7 +4,7 @@ body {
 
 #calculatorContainer{
 	text-align: center;
-	width: 214px;
+	width: 13.375em;
 	margin: 0 auto;
 }
 
@@ -26,8 +26,8 @@ h1 span{
 }
 
 #calculatorContainer button{
-	width: 50px;
-	height: 50px;
+	width: 3.125rem;
+	height: 3.125rem;
 	margin: 2px 0;
 	transition: all .5s;
 	font-weight: bold;
@@ -41,13 +41,13 @@ h1 span{
 }
 
 #calculatorDisplay{
-	height: 50px;
+	height: 3.125rem;
 	width: 100%;
 	background-color: #999;
 	color: #fff;
-	padding: 12px 20px;
-    margin-top: 45px;
-    margin-bottom: 4px;
+	padding: 0.75rem 1.25rem;
+    margin-top: 2.8125rem;
+    margin-bottom: 0.25rem;
     box-sizing: border-box;
     border-radius: 4px;
     border: 1px solid #777;
@@ -55,8 +55,8 @@ h1 span{
 }
 
 #calculatorContainer #equalButton{
-	height: 50px;
-	width: 214px;
+	height: 3.125rem;
+	width: 13.375rem;
 	background-color: #fd7202;
 	color: #fff;
 	border: 1px solid #fd7202;
