--- a/Styles/calculator.css
+++ b/Styles/calculator.css
@@ -36,12 +36,12 @@ h1 span{
 
 .numbers{
 	background-color: var(--numbers-color);
+	cursor: var(--cursor);
 }
 
 #calculatorContainer button:hover{
 	font-size: 1.1em;
 	background-color: rgb(201, 190, 190);
-	cursor: var(--cursor);
 }
 
 /*
@@ -105,6 +105,7 @@ h1 span{
 	background-color: var(--operator-color);
 	color: #fff;
 	border: 1px solid green;
+	cursor: var(--cursor);
 }
 
 #calculatorContainer .operators:hover{
@@ -135,4 +136,5 @@ h1 span{
 
 .disabledNumbers{
 	--numbers-color: rgb(81, 79, 79);
+	cursor: default;
 }
