--- a/Styles/calculator.css
+++ b/Styles/calculator.css
@@ -124,6 +124,11 @@ h1 span{
 	--operator-color: rgb(16, 180, 16);
 }
 
+.disabledOperators{
+	--operator-color: rgb(81, 79, 79);
+	--cursor: not-allowed; 
+}
+
 .disabledComa{
 	--decimal-color: rgb(81, 79, 79);
 	--cursor: not-allowed;
