--- a/Styles/calculator.css
+++ b/Styles/calculator.css
@@ -153,3 +153,9 @@ h1 span{
 	cursor: not-allowed;
 	pointer-events: none;
 }
+
+.disabledChangeSign{
+	--operator-color: rgb(81, 79, 79);
+	cursor: not-allowed;
+	pointer-events: none;
+}
